# spectre-main

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  compose.yaml  devcontainer-lock.json  devcontainer.json
data/: README.md
data_raw/: Readme.md  leeme.txt
memoria_yolo/: bibliografia.bib  main.tex  preamble.tex
memoria_yolo/borradores/: P1_revisado.tex  P2_reordenado.tex  P3_nuevo_criterio.tex  P3_revisado.tex  P3_simple.tex  P4_discusion.tex  README_RECONVERSION_YOLO.md  seccion_generalizacion_simple.tex
memoria_yolo/capitulos/: 01_introduccion.tex  02_estado_del_arte.tex  03_requisitos_y_diseno.tex  04_implementacion.tex  05_pruebas_y_resultados.tex  06_conclusiones.tex  07_anexos.tex
memoria_yolo/preliminares/: agradecimientos.tex  autorizacion.tex  informe_tutores.tex  portada.tex  resumen_en.tex  resumen_es.tex
modelos_tfg/: LEEME.txt
notebooks/: make_snr_versions.py  prueba.ipynb  resnet.ipynb  rfuav_classification_resnet18.ipynb  train.ipynb  view_spectogram.py
resultados/stage1_deteccion/: ANALISIS_PRESENCIA_DRON.md  YOLO_PROGRESO.md
resultados/stage2_clasificacion/: BARRIDO_SNR.md
scripts/: common.py  snr_noise.py  spectrogram_render.py
scripts/experimento_zeroshot/: README.md  analizar_zeroshot_detalle.py  generar_figuras_campo.py  generar_figuras_cap5.py  generar_figuras_cap5_extra.py  generar_galeria_campo.py  infer_zeroshot_campo.py  make_spectrograms_campo.py
scripts/legacy/: criterio_k_presencia.py  evaluate_detector.py  presencia_matriz_operacion.py  presencia_media_simple.py  (+4 more)
(+34 files in other folders)
